--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,7 +10,9 @@
     <script src="lib/jasmine-2.5.2/jasmine-html.js"></script>
     <script src="lib/jasmine-2.5.2/boot.js"></script>
     <!-- include source files here... -->
+    <script src="src/calculator.js"></script>
     <!-- include spec files here... -->
+    <script src="spec/calculator.spec.js"></script>
   </head>
 
   <body>
