Installs and configures karma.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -10,6 +10,8 @@
     <script src="lib/jasmine-2.5.2/jasmine-html.js"></script>
     <script src="lib/jasmine-2.5.2/boot.js"></script>
     <!-- include source files here... -->
+    <script src="node_modules/angular/angular.js"></script>
+    <script src="node_modules/angular-mocks/angular-mocks.js"></script>
     <script src="src/calculator.js"></script>
     <!-- include spec files here... -->
     <script src="spec/calculator.spec.js"></script>
