Writes failing testcase form omdbservice.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -14,7 +14,7 @@
     <script src="node_modules/angular-mocks/angular-mocks.js"></script>
     <script src="src/calculator.js"></script>
     <!-- include spec files here... -->
-    <script src="spec/calculator.spec.js"></script>
+    <script src="spec/omdb/service.spec.js"></script>
   </head>
 
   <body>
