Logs data to command prompt using Karma dump, and ng-mock's dump method for debugging.

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -12,7 +12,7 @@
     <!-- include source files here... -->
     <script src="node_modules/angular/angular.js"></script>
     <script src="node_modules/angular-mocks/angular-mocks.js"></script>
-    <script src="src/omdb/service.js"></script>
+    <script src="src/omdb/services.js"></script>
     <!-- include spec files here... -->
     <script src="spec/omdb/service.spec.js"></script>
   </head>
