--- a/app/index.html
+++ b/app/index.html
@@ -14,7 +14,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.5/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.18/angular-ui-router.js"></script>
     <!--our angular app-->
-    <script src="app/app.js"></script>
+    <!-- <script src="app/app.js"></script> -->
   </head>
 
   <body ng-app="meetIrl">
@@ -26,6 +26,9 @@
       </div>
     </nav>
     <div ui-view>Hello, world!</div>
+    <script src="app/services/users/users.js"></script>
+    <script src="app/components/users/users.js"></script>
+    <script src="app/app.js"></script>
   </body>
 
 </html>
